# sdlapp

./: README.md  import-summary.txt  local.properties
app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: SDL_android_main.c  main.c
gradle/wrapper/: gradle-wrapper.properties
